RESOLVED FIXED217913
Two feature flag names are incorrect
https://bugs.webkit.org/show_bug.cgi?id=217913
Summary Two feature flag names are incorrect
Peng Liu
Reported 2020-10-19 11:19:37 PDT
[Media in GPU Process] Two feature flag names are incorrect
Attachments
Patch (1.76 KB, patch)
2020-10-19 11:23 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-10-19 11:23:51 PDT
Radar WebKit Bug Importer
Comment 2 2020-10-19 11:24:56 PDT
EWS
Comment 3 2020-10-19 19:52:47 PDT
Committed r268711: <https://trac.webkit.org/changeset/268711> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411766 [details].
Note You need to log in before you can comment on or make changes to this bug.