Two feature flag names are incorrect https://bugs.webkit.org/show_bug.cgi?id=217913

Reviewed by Eric Carlson.

* Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultCaptureAudioInGPUProcessEnabled): The correct feature flag
is gpu_process_media.
(WebKit::defaultVP9SWDecoderEnabledOnBattery): The correct feature flag
is sw_vp9_decoder_on_battery.


Canonical link: https://commits.webkit.org/230662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268711 268f45cc-cd09-0410-ab3c-d52691b4dbfc